# axum-rest-api-sample

./: .dockerignore  .env  .env_docker  .env_test  .env_test_docker  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  PROJECT_CONTEXT.md  README.md  TODO.md  axum-api.session.sql  clippy.toml  deny.toml  docker-compose.full.yml  docker-compose.yml
.github/workflows/: ci.yml
docs/: API-Endpoints.md  api-docs.md
src/: lib.rs  main.rs
src/api/: accounts.rs  api_error.rs  api_version.rs  auth.rs  error.rs  extractors.rs  mod.rs  router.rs  server.rs  transactions.rs  users.rs  version.rs
src/api/handlers/: account_handlers.rs  auth_handlers.rs  mod.rs  transaction_handlers.rs  user_handlers.rs
src/api/routes/: account_routes.rs  auth_routes.rs  mod.rs  transaction_routes.rs  user_routes.rs
src/application/: api_error.rs  api_version.rs  app.rs  app_const.rs  config.rs  constants.rs  mod.rs  redis_service.rs  state.rs
src/application/repository/: account_repo.rs  transaction_repo.rs  user_repo.rs
src/application/security/: auth_error.rs  jwt_auth.rs  (+2 more)
src/infrastructure/: mod.rs  types.rs
tests/: account_test.rs  account_tests.rs  account_transaction_test.rs  auth_expire_tests.rs  auth_login_test.rs  auth_logout_test.rs  auth_refresh_tests.rs  auth_revoke_tests.rs  endpoints.http  health_test.rs  heartbeat_test.rs  transaction_test.rs  transaction_tests.rs  user_crud_tests.rs  version_test.rs
tests/common/: accounts.rs  auth.rs  constants.rs  fetch.rs  helpers.rs  hyper_fetch.rs  mod.rs  root.rs  route.rs  test_app.rs  transactions.rs  users.rs  utils.rs
(+9 files in other folders)
