[package]
name = "axum-web"
version = "0.1.1"
edition = "2021"
authors = ["Sheroz Khaydarov"]
description = "Kick-start template for building REST API Web service in Rust using axum, JWT, SQLx, PostgreSQL, and Redis"
readme = "README.md"
repository = "https://github.com/sheroz/axum-web"
license = "MIT"

[dependencies]
dotenvy = "0.15"
axum = { version = "0.8" }
axum-extra = { version = "0.10", features = ["typed-header"] }
tokio = { version = "1.42", features = ["full"] }
bytes = "1.9"
tower-http = { version = "0.6", features = ["cors"] }
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
http-body-util = { version = "0.1" }
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
    "serde",
] }
chrono = { version = "0.4", features = ["serde"] }

redis = { version = "0.27", features = ["tokio-comp"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "macros",
    "chrono",
] }

jsonwebtoken = { version = "9.3" }

[dev-dependencies]
serial_test = "3.2"
reqwest = { version = "0.12", features = ["json"] }
